--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^4.0.0",
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
@@ -21,6 +22,7 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.46.0",
     "eslint-plugin-vue": "^9.17.0",
+    "sass": "^1.65.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
