--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "ant-design-vue": "^4.0.0",
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
+    "path": "^0.12.7",
+    "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@types/screenfull": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "@vitejs/plugin-vue": "^4.2.3",
@@ -25,6 +28,7 @@
     "sass": "^1.65.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vue-i18n": "^9.2.2",
     "vue-tsc": "^1.8.5"
   }
 }
